validation de compte client
